--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "loadsh": "^0.0.4",
     "log4js": "^6.9.1",
     "mysql": "^2.18.1",
+    "mysql2": "^3.2.0",
     "nodemon": "^2.0.22",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.31.0",
